test_kuber/app-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: lb-app
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: "240"
spec:
  type: LoadBalancer
  selector:
    app: django
    name: web
  ports:
    - port: 8000
      targetPort: 8000
