test_kuber/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diploma-app
  labels:
    app: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
        - image: moonlight234/epam_full:latest
          name: django
          resources:
            requests:
              # memory: "64Mi"
              cpu: "10m"
            limits:
              # memory: "128Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /api/v1/healthz
              port: 8000
            initialDelaySeconds: 10
            timeoutSeconds: 10
          ports:
            - name: project-port
              protocol: TCP
              containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: lb-django
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: "240"
spec:
  type: LoadBalancer
  selector:
    app: django
    name: django
  ports:
    - port: 8080
      targetPort: 8000
